--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "typescript": "^5.1.6",
+    "viem": "^1.3.0",
+    "wagmi": "^1.3.9",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
